--- a/Assignment 1 Simple HTML Page.html
+++ b/Assignment 1 Simple HTML Page.html
@@ -54,14 +54,15 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
 
 <body>
 	<div id="page">
-<img src="Home Page Files/banner1.jpg" alt="ban" class="banner" id="banner" />
+<img src="banner1.jpg" alt="banner1" class="banner" id="banner" 
+/>
 <h1>Keilly Guevara Flores</h1>
 		<h2> DIGITAL PORTFOLIO </h2>
 
 	
-<p><img src="Home Page Files/KeillyGuevaraPhoto copy.jpg" alt="picture" class="text-img" id=".text-image" /> Hello there! Welcome to my home page! I am Keilly Guevara, a senior at UNLV majoring in Graphic Design. Some background information about myself, my family is from Guatemala but I was born and raised here in Las Vegas. In my free time I love to spend time with my family watching movies, as well as baking, reading, drawing, and painting. Lately I have delved into reading classical books, I was able to make some illustrations on the Count of Monte Cristo for one of my class assignments. </p>
+<p><img src="kgphoto.jpg" alt="kgphoto" class="text-img" id=".text-image" /> Hello there! Welcome to my home page! I am Keilly Guevara, a senior at UNLV majoring in Graphic Design. Some background information about myself, my family is from Guatemala but I was born and raised here in Las Vegas. In my free time I love to spend time with my family watching movies, as well as baking, reading, drawing, and painting. Lately I have delved into reading classical books, I was able to make some illustrations on the Count of Monte Cristo for one of my class assignments. </p>
 
-<p id="ending"> On this website you will find my class projects from illustration, graphics, photography, and sculpture.<img src="Home Page Files/KG LOGO.png" alt="logo" id="bird" /></p>
+<p id="ending"> On this website you will find my class projects from illustration, graphics, photography, and sculpture.<img src="kglogo.png" alt="logo" id="bird" /></p>
 </div> 
 </body>
 </html>
