--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
         font: 48pt/1.4em 'fascinate', static;
         text-align: center;
         text-shadow: 2px 3px 6px pink;
-		margin-top= 100px;
+		 margin-top: 70px
     } h2 {
         font: 20pt/2.4em 'Oswald', sans-serif;
         text-align: center;
@@ -28,13 +28,14 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
 		font-style: thin;
 		width: 768px;
 		margin: 18px auto;
-		margin-top: 80px;
+		margin-top: 70px;
 	} .text-img {
 		width: 60%;	
 		float: left;
 		margin: 6px 24px 24px 0;
 		boarder: 1px solid dimgray;
 		box-shadow: 2px 3px 6px darkgray;
+		margin-top: 15px
 	} #banner {
 		width: 100%;
 		margin: 0;
@@ -48,6 +49,24 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
 		width: 10%;
 		float: right;
 		margin-top: -50px;
+}	 ul {
+        width: 100%;
+        margin-top: -4px;
+		margin-left: -40px
+    } li {
+        font: 14pt/2.0em 'oswald';
+        list-style: none;
+        float: left;
+        width: 50%;
+        height: 40px;
+        text-align: center;
+        background: pink;
+    } a li {
+        color: black;
+    } a {
+        text-decoration: none;
+    } a li:hover {
+        background: rgba(169,225,245,0.50);
 }
 </style>	
 </head>
@@ -56,10 +75,15 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
 	<div id="page">
 <img src="banner1.jpg" alt="banner1" class="banner" id="banner" 
 />
-<h1>Keilly Guevara Flores</h1>
+		 <ul>
+          <a> </a>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+          </ul>
+          <li><a href="Meet-Keilly.html">Welcome Message</a></li>
+        </ul>
+<h1 >Keilly Guevara Flores</h1>
 		<h2> DIGITAL PORTFOLIO </h2>
-
-	
 <p><img src="kgphoto.jpg" alt="kgphoto" class="text-img" id=".text-image" /> Hello there! Welcome to my home page! I am Keilly Guevara, a senior at UNLV majoring in Graphic Design. Some background information about myself, my family is from Guatemala but I was born and raised here in Las Vegas. In my free time I love to spend time with my family watching movies, as well as baking, reading, drawing, and painting. Lately I have delved into reading classical books, I was able to make some illustrations on the Count of Monte Cristo for one of my class assignments. </p>
 
 <p id="ending"> On this website you will find my class projects from illustration, graphics, photography, and sculpture.<img src="kglogo.png" alt="logo" id="bird" /></p>
