--- a/Meet-Keilly.html
+++ b/Meet-Keilly.html
@@ -82,7 +82,7 @@
         </ul>
 		
 <h1 class="welcome">Wellcome</h1>
-<p><img src="mr-goldrich-present.png" alt="star" class="text-img" id=".text-image" /> Here is a short welcome trailer! Here you will also find the animated logo I created in my Illustration class. I added a theme song to accompahy it, this was my first time using GarageBand, I hope you enjoy it! </p>
+<p><img src="mr-goldrich-present.png" alt="star" class="text-img" id=".text-image" /> Here is a short welcome trailer! You will also find an animated logo I created in my Illustration class. I added a theme song to accompany it, this was my first time using GarageBand, I hope you enjoy it! </p>
 	<video width="640" height="360" controls poster="kglogo.png">	
  		 <source src="compressed-welcome-message.mp4" type="video/mp4">
 </video>
