--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
 		box-shadow: none;
 		border: none;
 	} #ending{
-		margin-top: 120px;
+		margin-top: 100px;
 		font-size: 14pt;
 	} #bird{
 		width: 10%;
@@ -57,7 +57,7 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
         font: 14pt/2.0em 'oswald';
         list-style: none;
         float: left;
-        width: 50%;
+        width: 33.33%;
         height: 40px;
         text-align: center;
         background: pink;
@@ -81,6 +81,7 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
             <li><a href="index.html">Home</a></li>
           </ul>
           <li><a href="Meet-Keilly.html">Welcome Message</a></li>
+			<li><a href="KeillyGportfolio1.html">Portfolio</a></li>
         </ul>
 <h1 >Keilly Guevara Flores</h1>
 		<h2> DIGITAL PORTFOLIO </h2>
