--- a/Meet-Keilly.html
+++ b/Meet-Keilly.html
@@ -54,7 +54,7 @@
         font: 14pt/2.0em 'oswald';
         list-style: none;
         float: left;
-        width: 50%;
+        width: 33.33%;
         height: 40px;
         text-align: center;
         background: pink;
@@ -79,6 +79,7 @@
             <li><a href="index.html">Home</a></li>
           </ul>
 <li><a href="Meet-Keilly.html">Welcome Message</a></li>
+ <li><a href="KeillyGportfolio1.html">Portfolio</a></li>
         </ul>
 		
 <h1 class="welcome">Wellcome</h1>
