--- a/KeillyGportfolio1.html
+++ b/KeillyGportfolio1.html
@@ -64,8 +64,8 @@
 <div id="textbox">
         <!-- Leaves photo -->
         <figure>
-			<a href="littlelamp.png">
-			<img src="thumb-littlelamp.png" alt="thumb-littlelamp"/>
+			<a href="LittleLamp.png">
+			<img src="thumb-LittleLamp.png" alt="thumb-LittleLamp"/>
 			</a>
 			<figcaption>
             The Little Lamp Comic Cover
