--- a/KeillyGportfolio1.html
+++ b/KeillyGportfolio1.html
@@ -64,7 +64,7 @@
 <div id="textbox">
         <!-- Leaves photo -->
         <figure>
-			<a href="LittleLamp.png">
+			<a href="littlelamp.png">
 			<img src="thumb-LittleLamp.png" alt="thumb-LittleLamp"/>
 			</a>
 			<figcaption>
