--- a/KeillyGportfolio1.html
+++ b/KeillyGportfolio1.html
@@ -92,7 +92,7 @@
 		<img src="thumb-ladyinreddress.png" alt="thumb-ladyinreddress"/>
 		</a>
 		<figcaption>
-          Illustration Of A Lady In Blue
+          Illustration Of A Lady In Red
 		</figcaption>
   </figure>
 	<figure>
