--- a/KeillyGportfolio1.html
+++ b/KeillyGportfolio1.html
@@ -52,10 +52,16 @@
         font: 14pt/2.0em 'oswald';
         list-style: none;
         float: left;
-        width: 200%;
-        height: 40px;
+        width: 120%;
+        height: 43px;
         text-align: center;
         background: pink;
+	} ul {
+		margin: 10px;
+		margin-left: -10px;
+		display: center;
+	}
+
 </style>
 </head>
 
@@ -126,11 +132,11 @@
 		<figcaption>
           Portrait Project Image 3
 		</figcaption>
-  </figure>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-          </ul>
-  
-    </div>
+  </figure> 
+		<ul>
+       <li><a href="guevarakeilly_assignment-5-tables.html">Portfolio Descriptions</a></li>
+		</ul>
+    </div> 
+			
 </body>
 </html>
