--- a/Meet-Keilly.html
+++ b/Meet-Keilly.html
@@ -54,7 +54,7 @@
         font: 14pt/2.0em 'oswald';
         list-style: none;
         float: left;
-        width: 33.33%;
+        width: 25%;
         height: 40px;
         text-align: center;
         background: pink;
@@ -73,13 +73,11 @@
 <body>
 	<div id="page">
 <img src="banner1.jpg" alt="banner1" class="banner" id="banner"/>
-		 <ul>
-          <a> </a>
-          <ul>
+		  <ul>
             <li><a href="index.html">Home</a></li>
-          </ul>
-<li><a href="Meet-Keilly.html">Welcome Message</a></li>
- <li><a href="KeillyGportfolio1.html">Portfolio</a></li>
+			<li><a href="Meet-Keilly.html">Welcome Message</a></li>
+			<li><a href="KeillyGportfolio1.html">Portfolio</a></li>
+			<li><a href="guevarakeilly_assignment-5-tables.html">Portfolio Descriptions</a></li> 
         </ul>
 		
 <h1 class="welcome">Wellcome</h1>
