--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
         font: 14pt/2.0em 'oswald';
         list-style: none;
         float: left;
-        width: 33.33%;
+        width: 25%;
         height: 40px;
         text-align: center;
         background: pink;
@@ -76,13 +76,12 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
 <img src="banner1.jpg" alt="banner1" class="banner" id="banner" 
 />
 		 <ul>
-          <a> </a>
-          <ul>
             <li><a href="index.html">Home</a></li>
-          </ul>
-          <li><a href="Meet-Keilly.html">Welcome Message</a></li>
+			<li><a href="Meet-Keilly.html">Welcome Message</a></li>
 			<li><a href="KeillyGportfolio1.html">Portfolio</a></li>
+			<li><a href="guevarakeilly_assignment-5-tables.html">Portfolio Descriptions</a></li> 
         </ul>
+		
 <h1 >Keilly Guevara Flores</h1>
 		<h2> DIGITAL PORTFOLIO </h2>
 <p><img src="kgphoto.jpg" alt="kgphoto" class="text-img" id=".text-image" /> Hello there! Welcome to my home page! I am Keilly Guevara, a senior at UNLV majoring in Graphic Design. Some background information about myself, my family is from Guatemala but I was born and raised here in Las Vegas. In my free time I love to spend time with my family watching movies, as well as baking, reading, drawing, and painting. Lately I have delved into reading classical books, I was able to make some illustrations on the Count of Monte Cristo for one of my class assignments. </p>
