--- a/KeillyGportfolio1.html
+++ b/KeillyGportfolio1.html
@@ -38,6 +38,7 @@
     } figcaption {
         font: 12pt/1.4em oswald;
         margin-top: 3px;
+   }
     } .zoom {
         background: url("../Tutorial 4 Portfolio/thumb-tulip.jpg");
         background-size: 100%;
@@ -45,22 +46,47 @@
     } img:hover {
         transform: scale(1.03);
         transition: transform 0.5s;
+	} li:hover {
+		transform: scale(1.10);
+        transition: transform 0.5s;
+	}
     } .zoom:hover {
         background-size: 105%;
         transition: background-size 0.5s;
-    } li {
-        font: 14pt/2.0em 'oswald';
+	} li {
+        font: 14pt/1.0em 'oswald';
         list-style: none;
+		display:flex;
+		justify-content: center;
+		align-items:center;
         float: left;
-        width: 120%;
-        height: 43px;
         text-align: center;
-        background: pink;
+		height 100vh;
+		float: left;
+        height: 40px;
+        text-align: center;
+		width: 95.7%;
+		white-space: nowrap;
 	} ul {
+		display:flex;
+		justify-content: center;
+		align-items:center;
+		height 100vh;
+		float: left;
+		background: pink;
+		width: 18%;
+        height: 43px;
+		margin-top: 25px;
+		//margin-left: 430px;
 		margin: 10px;
 		margin-left: -10px;
 		display: center;
-	}
+	 } a li {
+        color: black;
+    } a {
+        text-decoration: none;
+    } a li:hover {
+        background: rgba(169,225,245,0.50);
 
 </style>
 </head>
