--- a/guevarakeilly_assignment-5-tables.html
+++ b/guevarakeilly_assignment-5-tables.html
@@ -25,18 +25,43 @@
 		float: none;
 		box-shadow: none;
 		boarder: none;
-	} ul {
-        width: 100%;
-        margin-top: -4px;
-		margin-left: 0px
-    } li {
+	}
+ } .zoom {
+        background: url("../Tutorial 4 Portfolio/thumb-tulip.jpg");
+        background-size: 100%;
+        background-position: center;
+	} li:hover {
+		transform: scale(1.10);
+        transition: transform 0.5s;
+	}
+    } .zoom:hover {
+        background-size: 105%;
+        transition: background-size 0.5s;
+	} li {
         font: 14pt/2.0em 'oswald';
-        list-style: none;
-        float: left;
-        width: 25%;
+  		list-style: none;
+		display:flex;
+		justify-content: center;
+		align-items:center;
+		height 100vh;
+		float: left;
+        height: 40px;
+        text-align: center;
+		width: 90%;
+        margin-top: -4px;
+		margin-left: -50px;
+	} ul {
+		display:flex;
+		justify-content: center;
+		align-items:center;
+		height 100vh;
+		float: left;
         height: 40px;
         text-align: center;
         background: pink;
+		width: 100%;
+        margin-top: -4px;
+		margin-left: 0px;
     } a li {
         color: black;
     } a {
@@ -90,7 +115,8 @@
             <li><a href="index.html">Home</a></li>
 			<li><a href="Meet-Keilly.html">Welcome Message</a></li>
 			<li><a href="KeillyGportfolio1.html">Portfolio</a></li>
-			<li><a href="guevarakeilly_assignment-5-tables.html">Portfolio Descriptions</a></li> 
+			<li><a href="guevarakeilly_assignment-5-tables.html">Portfolio Descriptions</a></li>
+			<li><a href="guevarakeilly_grids.html">Photography Grid</a></li> 
         </ul>
 		
 <h1>Keilly Guevara Flores</h1>
