--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
 			<li><a href="KeillyGportfolio1.html">Portfolio</a></li>
 			<li><a href="guevarakeilly_assignment-5-tables.html">Portfolio Descriptions</a></li> 
 			<li><a href="guevarakeilly_grids.html">Photography Grid</a></li> 
+			<li><a href="guevarakeilly_contact-forms.html">Contact Form</a></li> 
         </ul>
 		
 <h1 >Keilly Guevara Flores</h1>
