--- a/guevarakeilly_assignment-8.html
+++ b/guevarakeilly_assignment-8.html
@@ -2,13 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Welcome to the Beach!</title>
+<link rel="icon" href="favicon.png">
+<title>Aha! Gotcha!</title>
 <link href="https://fonts.googleapis.com/css2?family=Alike&family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Fascinate&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-<link rel="manifest" href="/site.webmanifest" />
 <style>
     * {margin: 0; padding: 0;}
     body {
