--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
 		background: whitesmoke;
 	} #page {
 		width: 928px;
+		max-width:100%;
 		height: 1228px;
+		max-height: 100%;
 		background: white;
 		boarder: 1px solid darkgray; 
 		margin: 0 auto;
@@ -18,17 +20,18 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
         font: 48pt/1.4em 'fascinate', static;
         text-align: center;
         text-shadow: 2px 3px 6px pink;
-		 margin-top: 70px
+		margin-top: 70px;
     } h2 {
         font: 20pt/2.4em 'Oswald', sans-serif;
         text-align: center;
-		margin-top: -50px
+		margin-top: -50px;
 	} p {
 		font: 14pt/1.4em 'oswald', sans-serif;
 		font-style: thin;
 		width: 768px;
 		margin: 18px auto;
 		margin-top: 70px;
+		
 	} .text-img {
 		width: 60%;	
 		float: left;
@@ -49,7 +52,6 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
 		width: 10%;
 		float: right;
 		margin-top: -50px;
-	}
  } .zoom {
         background: url("../Tutorial 4 Portfolio/thumb-tulip.jpg");
         background-size: 100%;
@@ -61,38 +63,63 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
     } .zoom:hover {
         background-size: 105%;
         transition: background-size 0.5s;
+	} ul {
+		background-color: pink;
+		display:flex;
+		justify-content: center;
+		align-items:center;
+		float: left;
+        height: 40px;
+        text-align: center;
+        margin-top: -4px;
+		max-width: 95.7%;
 	} li {
         font: 14pt/2.0em 'oswald';
   		list-style: none;
-		display:flex;
-		justify-content: center;
-		align-items:center;
-		height 100vh;
 		float: left;
-        height: 40px;
-        text-align: center;
-		width: 95.7%;
-        margin-top: -4px;
+		width: 1200px;
+		height: 20px;
+        margin-top: -20px;
 		margin-left: -90px;
-	} ul {
-		display:flex;
-		justify-content: center;
-		align-items:center;
-		height 100vh;
-		float: left;
-        height: 40px;
-        text-align: center;
-        background: pink;
-		width: 95.7%;
-        margin-top: -4px;
-		margin-left: 0px;
+		max-width:100%;
+		padding-left: 10px;
     } a li {
         color: black;
     } a {
         text-decoration: none;
     } a li:hover {
         background: rgba(169,225,245,0.50);
-}
+	} @media only screen and (max-width : 750px ){
+			.text-img {
+				float: none;
+				margin-top: -20px;
+				width: 95%;
+			} h1 {
+        		font: 30pt/1.4em 'fascinate', static;
+				margin-top: -20px;
+			} h2 {
+       			font: 16pt/2.4em 'Oswald', sans-serif;
+				text-align: center;
+				margin-top: -40px;
+			} p {
+				font: 16pt/1.4em 'oswald';
+				width: 80%;
+				margin: 48px auto;
+			} li {
+				font: 5pt/2.0em 'oswald';
+				margin-left: -50px;
+				margin-top: 3px;
+				border-spacing: 20px;
+			} ul {
+				max-width: 89%;
+				height: 25px;
+			} #bird{
+				width: 15%;
+				float: right;
+				margin-top: -10px;
+			} #ending {
+				margin-bottom: 20px;
+	}
 </style>	
 </head>
 
@@ -109,6 +136,7 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
 			<li><a href="guevarakeilly-contact.html">Contact Form</a></li>  
         </ul>
 		
+<div id="pink"></div>
 <h1 >Keilly Guevara Flores</h1>
 		<h2> DIGITAL PORTFOLIO </h2>
 <p><img src="kgphoto.jpg" alt="kgphoto" class="text-img" id=".text-image" /> Hello there! Welcome to my home page! I am Keilly Guevara, a senior at UNLV majoring in Graphic Design. Some background information about myself, my family is from Guatemala but I was born and raised here in Las Vegas. In my free time I love to spend time with my family watching movies, as well as baking, reading, drawing, and painting. Lately I have delved into reading classical books, I was able to make some illustrations on the Count of Monte Cristo for one of my class assignments. </p>
