--- a/index.html
+++ b/index.html
@@ -16,7 +16,21 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
 		background: white;
 		boarder: 1px solid darkgray; 
 		margin: 0 auto;
-	 } h1 {
+	} #star {
+		margin-top: -80px;
+		margin-left: -4px;
+		width: 5%;
+		max-width:100%;
+        position: relative;
+		animation-name: flying;
+		animation-duration: 3s;
+		animation-fill-mode: forwards;
+		animation-timing-function: ease-in;
+		}
+		@keyframes flying {
+			0% {left: 10px; transform: rotate(360deg);}
+			100% {left: 120vw;} 
+	} h1 {
         font: 48pt/1.4em 'fascinate', static;
         text-align: center;
         text-shadow: 2px 3px 6px pink;
@@ -30,7 +44,7 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
 		font-style: thin;
 		width: 768px;
 		margin: 18px auto;
-		margin-top: 70px;
+		margin-top: 33px;
 		
 	} .text-img {
 		width: 60%;	
@@ -38,7 +52,7 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
 		margin: 6px 24px 24px 0;
 		boarder: 1px solid dimgray;
 		box-shadow: 2px 3px 6px darkgray;
-		margin-top: 15px
+		margin-top: 5px
 	} #banner {
 		width: 100%;
 		margin: 0;
@@ -59,44 +73,55 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
 	} li:hover {
 		transform: scale(1.10);
         transition: transform 0.5s;
-	}
     } .zoom:hover {
         background-size: 105%;
         transition: background-size 0.5s;
 	} ul {
-		background-color: pink;
-		display:flex;
-		justify-content: center;
-		align-items:center;
-		float: left;
-        height: 40px;
-        text-align: center;
-        margin-top: -4px;
-		max-width: 95.7%;
+		max-width: 100%;
+		margin-top: -4px;
+		margin-left: 0;
+		padding: 0;
 	} li {
-        font: 14pt/2.0em 'oswald';
-  		list-style: none;
+        width: 24.9%;
+		max-width: 100%;
+		height: 45px;
 		float: left;
-		width: 1200px;
-		height: 20px;
-        margin-top: -20px;
-		margin-left: -90px;
-		max-width:100%;
-		padding-left: 10px;
+  		list-style: none;
+		text-align: center;
+		font: 15pt/2em 'oswald';
+		background: pink;
+		padding: none;
     } a li {
         color: black;
-    } a {
-        text-decoration: none;
+		text-decoration: none;
     } a li:hover {
-        background: rgba(169,225,245,0.50);
-	} @media only screen and (max-width : 750px ){
-			.text-img {
+        background: lightyellow;
+	}li:last-child {
+		border-left: 1px solid white;
+	} ul li ul li {
+		visibility: hidden;
+		width: 100%;
+		float: none;
+	} ul li:hover li {
+		visibility: visible;
+	} a {
+		text-decoration: none;
+	}span{
+		font: 20pt/2.0em 'oswald';
+		float: left;
+		line-height: 1.0em;
+		margin: 0 3px -5px 0;
+		color: pink;
+	} @media only screen and (max-width: 750px) {
+			#page, main {
+				height: 1290px;
+		}	.text-img {
 				float: none;
-				margin-top: -20px;
+				margin-top: 20px;
 				width: 95%;
 			} h1 {
         		font: 30pt/1.4em 'fascinate', static;
-				margin-top: -20px;
+				margin-top: 50px;
 			} h2 {
        			font: 16pt/2.4em 'Oswald', sans-serif;
 				text-align: center;
@@ -104,22 +129,31 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
 			} p {
 				font: 16pt/1.4em 'oswald';
 				width: 80%;
-				margin: 48px auto;
-			} li {
-				font: 5pt/2.0em 'oswald';
-				margin-left: -50px;
-				margin-top: 3px;
-				border-spacing: 20px;
+				margin: 15px auto;
 			} ul {
-				max-width: 89%;
-				height: 25px;
+				max-width: 100%;	
+			} li {
+				font: 9pt/1.2em 'oswald';
+				text-align: center;
+				padding: none;
+				border: none;
+				margin-top: 0 auto;
+				height: 33px;
+				width: 24.75%;
+		} a {
+			text-align: center;
+			} span {
+				line-height: 1.0em;
+				margin: 0 6 -30 0;
+				text-align: center;
+				height: 35px;
 			} #bird{
 				width: 15%;
 				float: right;
 				margin-top: -10px;
 			} #ending {
 				margin-bottom: 20px;
-	}
+		}
 </style>	
 </head>
 
@@ -127,18 +161,22 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
 	<div id="page">
 <img src="banner1.jpg" alt="banner1" class="banner" id="banner" 
 />
-		 <ul>
-            <li><a href="index.html">Home</a></li>
-			<li><a href="Meet-Keilly.html">Welcome Message</a></li>
-			<li><a href="KeillyGportfolio1.html">Portfolio</a></li>
-			<li><a href="guevarakeilly_assignment-5-tables.html">Portfolio Descriptions</a></li> 
-			<li><a href="guevarakeilly_grids.html">Photography Grid</a></li> 
-			<li><a href="guevarakeilly-contact.html">Contact Form</a></li>  
-        </ul>
-		
-<div id="pink"></div>
+		<ul> 
+			<li>Home</li>
+			 <a  href="Meet-Keilly.html"><li>Welcome Message</li></a>
+			 <a  href="KeillyGportfolio1.html"><li>Portfolio</li></a>
+			<li>
+				More
+			<ul>
+			 <a href="guevarakeilly_assignment-5-tables.html"><li>Portfolio Descriptions</li></a>
+			 <a  href="guevarakeilly_grids.html"><li>Photography Grid</li></a>
+			 <a  href="guevarakeilly-contact.html"><li>Contact Form</li></a> 
+			</ul>	
+			</li>
+		</ul>
 <h1 >Keilly Guevara Flores</h1>
 		<h2> DIGITAL PORTFOLIO </h2>
+		<img id="star" src="star-icon.png" />
 <p><img src="kgphoto.jpg" alt="kgphoto" class="text-img" id=".text-image" /> Hello there! Welcome to my home page! I am Keilly Guevara, a senior at UNLV majoring in Graphic Design. Some background information about myself, my family is from Guatemala but I was born and raised here in Las Vegas. In my free time I love to spend time with my family watching movies, as well as baking, reading, drawing, and painting. Lately I have delved into reading classical books, I was able to make some illustrations on the Count of Monte Cristo for one of my class assignments. </p>
 
 <p id="ending"> On this website you will find my class projects from illustration, graphics, photography, and sculpture.<img src="kglogo.png" alt="logo" id="bird" /></p>
