--- a/guevarakeilly_flipbooks.html
+++ b/guevarakeilly_flipbooks.html
@@ -45,6 +45,8 @@
 		height: 580px;
 		margin: 15px;
 		margin-top: 50px;
+		boarder: 1px solid dimgray;
+		box-shadow: 2px 3px 6px darkgray;
 	} .hard {
 		background: lightyellow !important;
 		color: black;
