--- a/index.html
+++ b/index.html
@@ -1,24 +1,48 @@
 <!doctype html>
 <html>
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5XNQ5DSDJ8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5XNQ5DSDJ8');
+</script>
 <meta charset="UTF-8">
 <title>GuevaraKeilly_Assignment1-Simple-HTML-Page</title>
-<link 
-href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 <style>
 	body {
 		background: whitesmoke;
 	} #page {
 		width: 928px;
 		max-width:100%;
-		height: 1228px;
+		height: 1820px;
 		max-height: 100%;
 		background: white;
 		boarder: 1px solid darkgray; 
 		margin: 0 auto;
 	} #star {
-		margin-top: -80px;
-		margin-left: -4px;
+		margin-top: 20px;
+		margin-left: -5px;
+		width: 5%;
+		max-width:100%;
+        position: relative;
+		animation-name: flying;
+		animation-duration: 3s;
+		animation-fill-mode: forwards;
+		animation-timing-function: ease-in;
+		}
+		@keyframes flying {
+			0% {left: 10px; transform: rotate(360deg);}
+			100% {left: 120vw;} 
+	}#star2 {
+		margin-top: -20px;
+		margin-left: -5px;
 		width: 5%;
 		max-width:100%;
         position: relative;
@@ -31,21 +55,20 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
 			0% {left: 10px; transform: rotate(360deg);}
 			100% {left: 120vw;} 
 	} h1 {
-        font: 48pt/1.4em 'fascinate', static;
+        font: 48pt/1.4em 'lexend deca', static;
         text-align: center;
         text-shadow: 2px 3px 6px pink;
-		margin-top: 70px;
+		margin-top: 1px;
     } h2 {
-        font: 20pt/2.4em 'Oswald', sans-serif;
+        font: 20pt/2.4em 'roboto', sans-serif;
         text-align: center;
 		margin-top: -50px;
 	} p {
-		font: 14pt/1.4em 'oswald', sans-serif;
+		font: 14pt/1.4em 'roboto', sans-serif;
 		font-style: thin;
 		width: 768px;
 		margin: 18px auto;
-		margin-top: 33px;
-		
+		margin-top: 30px;
 	} .text-img {
 		width: 60%;	
 		float: left;
@@ -63,9 +86,14 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
 		margin-top: 100px;
 		font-size: 14pt;
 	} #bird{
-		width: 10%;
-		float: right;
-		margin-top: -50px;
+		width: 50%;
+		margin-left: 230px;
+		margin-right: 230px;
+		margin-top: 80px;
+		position: relative;
+		animation-name: fade-in;
+		animation-duration: 3s;
+		animation-fill-mode: forwards;
  } .zoom {
         background: url("../Tutorial 4 Portfolio/thumb-tulip.jpg");
         background-size: 100%;
@@ -88,9 +116,10 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
 		float: left;
   		list-style: none;
 		text-align: center;
-		font: 15pt/2em 'oswald';
+		font: 15pt/2em 'roboto';
 		background: pink;
 		padding: none;
+		font-weight: 700;
     } a li {
         color: black;
 		text-decoration: none;
@@ -107,7 +136,7 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
 	} a {
 		text-decoration: none;
 	}span{
-		font: 20pt/2.0em 'oswald';
+		font: 20pt/2.0em 'roboto';
 		float: left;
 		line-height: 1.0em;
 		margin: 0 3px -5px 0;
@@ -120,26 +149,27 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
 				margin-top: 20px;
 				width: 95%;
 			} h1 {
-        		font: 30pt/1.4em 'fascinate', static;
+        		font: 30pt/1.4em 'lexend deca', static;
 				margin-top: 50px;
 			} h2 {
-       			font: 16pt/2.4em 'Oswald', sans-serif;
+       			font: 16pt/2.4em 'roboto', sans-serif;
 				text-align: center;
 				margin-top: -40px;
 			} p {
-				font: 16pt/1.4em 'oswald';
+				font: 16pt/1.4em 'roboto';
 				width: 80%;
 				margin: 15px auto;
 			} ul {
 				max-width: 100%;	
 			} li {
-				font: 9pt/1.2em 'oswald';
+				font: 9pt/1.2em 'roboto';
 				text-align: center;
 				padding: none;
 				border: none;
 				margin-top: 0 auto;
 				height: 33px;
 				width: 24.75%;
+				font-weight: 700;
 		} a {
 			text-align: center;
 			} span {
@@ -170,16 +200,17 @@ href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200.
 			<ul>
 			 <a href="guevarakeilly_assignment-5-tables.html"><li>Portfolio Descriptions</li></a>
 			 <a  href="guevarakeilly_grids.html"><li>Photography Grid</li></a>
-			 <a  href="guevarakeilly-contact.html"><li>Contact Form</li></a> 
-			</ul>	
+			 <a  href="guevarakeilly-contact.html"><li>Contact Form</li></a>
+			 <a  href="guevarakeilly_flipbooks.html"><li>Digital Booklets</li></a>
+			</ul>
 			</li>
 		</ul>
+<img src="kglogo.png" alt="logo" id="bird" />
+<img id="star" src="star-icon.png" />
 <h1 >Keilly Guevara Flores</h1>
 		<h2> DIGITAL PORTFOLIO </h2>
-		<img id="star" src="star-icon.png" />
-<p><img src="kgphoto.jpg" alt="kgphoto" class="text-img" id=".text-image" /> Hello there! Welcome to my home page! I am Keilly Guevara, a senior at UNLV majoring in Graphic Design. Some background information about myself, my family is from Guatemala but I was born and raised here in Las Vegas. In my free time I love to spend time with my family watching movies, as well as baking, reading, drawing, and painting. Lately I have delved into reading classical books, I was able to make some illustrations on the Count of Monte Cristo for one of my class assignments. </p>
-
-<p id="ending"> On this website you will find my class projects from illustration, graphics, photography, and sculpture.<img src="kglogo.png" alt="logo" id="bird" /></p>
+<img id="star2" src="star-icon.png" />
+<p><img src="kgphoto.jpg" alt="kgphoto" class="text-img" id=".text-image" /> Hello there! Welcome to my home page! I am Keilly Guevara, a senior at UNLV majoring in Graphic Design. Some background information about myself, my family is from Guatemala but I was born and raised here in Las Vegas. In my free time I love to spend time with my family watching movies, as well as baking, reading, drawing, and painting. Lately I have delved into reading classical books, I was able to make some illustrations on the Count of Monte Cristo for one of my class assignments. On the other pages you will find my class projects from illustration, graphics, photography, and sculpture. </p>
 </div> 
 </body>
 </html>
