--- a/Meet-Keilly.html
+++ b/Meet-Keilly.html
@@ -3,18 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <title>Meet-Keilly</title>
-<link href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 <style>
-	@font-face {
-  font-family: 'Fascinate';
-  font-style: normal;
-  font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/fascinate/v22/z7NWdRrufC8XJK0IIElS3bzRZv-drrOg.woff2) format('woff2');
 	} body {
 		background: whitesmoke;
 	} #page {
 		width: 928px;
-		height: 1228px;
+		height: 1298px;
 		background: white;
 		boarder: 1px solid darkgray;
 		margin: 0 auto;
@@ -24,16 +21,66 @@
 		float: none;
 		box-shadow: none;
 		boarder: none;
+	} .zoom {
+        background-size: 100%;
+        background-position: center;
+	} li:hover {
+		transform: scale(1.10);
+        transition: transform 0.5s;
+		background: lightyellow;
+    } .zoom:hover {
+        background-size: 105%;
+        transition: background-size 0.5s;
+	} ul {
+		max-width: 100%;
+		margin-top: -4px;
+		margin-left: 0;
+		padding: 0;
+	} li {
+        width: 24.92%;
+		max-width: 100%;
+		height: 45px;
+		float: left;
+  		list-style: none;
+		text-align: center;
+		font: 15pt/2em 'roboto';
+		background: pink;
+		padding: none;
+		font-weight: 700;
+    } a li {
+        color: black;
+		text-decoration: none;
+    } a li:hover {
+        background: lightyellow;
+	}li:last-child {
+		border-left: 1px solid white;
+	} ul li ul li {
+		visibility: hidden;
+		width: 100%;
+		float: none;
+	} ul li:hover li {
+		visibility: visible;
+	} a {
+		text-decoration: none;
+	}span{
+		font: 20pt/2.0em 'roboto';
+		float: left;
+		line-height: 1.0em;
+		margin: 0 3px -5px 0;
+		color: pink;
 	} h1 {
-        font: 48pt/1.4em 'fascinate', static;
+        font: 48pt/1.4em 'lexend deca', static;
         text-align: center;
         text-shadow: 2px 3px 6px pink;
+		margin-top: 80px;
+		animation: fade-up 0.6s 0.4s backwards;
 	} p {
-		font: 14pt/1.4em 'oswald', sans-serif;
+		font: 14pt/1.4em 'roboto', sans-serif;
 		font-style: thin;
-		width: 768px;
+		width: 708px;
 		margin: 18px auto;
 		margin-top: 60px;
+		animation: fade-up 0.6s 0.4s backwards;
 	} .text-img {
 		width: 20%;
 		float: left;
@@ -41,72 +88,65 @@
 		boarder: none;
 		box-shadow: none;
 		margin-top: -35px
+		animation: fade-up 0.6s 0.4s backwards;
 	} video {
 		margin: 96px auto;
 		display: block;
 		box-shadow: 2px 3px 6px dimgray;
 		margin-top: 65px;
-	}
- } .zoom {
-        background: url("../Tutorial 4 Portfolio/thumb-tulip.jpg");
-        background-size: 100%;
-        background-position: center;
-	} li:hover {
-		transform: scale(1.10);
-        transition: transform 0.5s;
-	}
-    } .zoom:hover {
-        background-size: 105%;
-        transition: background-size 0.5s;
-	} li {
-        font: 14pt/2.0em 'oswald';
-  		list-style: none;
-		display:flex;
-		justify-content: center;
-		align-items:center;
-		height 100vh;
-		float: left;
-        height: 40px;
-        text-align: center;
-		width: 95.7%;
-        margin-top: -4px;
-		margin-left: -90px;
-	} ul {
-		display:flex;
-		justify-content: center;
-		align-items:center;
-		height 100vh;
-		float: left;
-        height: 40px;
-        text-align: center;
-        background: pink;
-		width: 95.7%;
-        margin-top: -4px;
-		margin-left: 0px;
-    } a li {
-        color: black;
-    } a {
-        text-decoration: none;
-    } a li:hover {
-        background: rgba(169,225,245,0.50);
+		animation: fade-up 0.6s 0.4s backwards;
+	} @keyframes fade-up {
+		0% { 
+			opacity: 0;
+			transform: translateY(30px) scale(0.9);
+		} 
+		
+		100% { 
+			opacity : 1; 
+			transform: translateY(0px) scale (1);
+		}
 	} .welcome {
 		margin-top: 70px;
-}
+	} @media only screen and (max-width: 750px) {
+		#banner1 {
+		width: 100%
+	}	h1 {
+        font: 30pt/1.4em 'fascinate', static;
+		margin-top: -20px;
+	} p {
+		font: 16pt/1.4em 'oswald';
+		width: 80%;
+		margin: 48px auto;
+	} video {
+		width: 50%;
+	} .text-img {
+		width: 50%;
+	}	header ul {
+		float: none;
+		width: 100%
+	}	header ul a li {
+		float: none;
+		width: 100%
 </style>
 </head>
 
 <body>
 	<div id="page">
 <img src="banner1.jpg" alt="banner1" class="banner" id="banner"/>
-		  <ul>
+		<ul>
             <li><a href="index.html">Home</a></li>
-			<li><a href="Meet-Keilly.html">Welcome Message</a></li>
-			<li><a href="KeillyGportfolio1.html">Portfolio</a></li>
-			<li><a href="guevarakeilly_assignment-5-tables.html">Portfolio Descriptions</a></li>
-			<li><a href="guevarakeilly_grids.html">Photography Grid</a></li>
-			<li><a href="guevarakeilly-contact-forms.html">Contact Form</a></li> 
-        </ul>
-		
+			 <a  href="Meet-Keilly.html"><li>Welcome Message</li></a>
+			 <a  href="KeillyGportfolio1.html"><li>Portfolio</li></a>
+			<li>
+				More
+			<ul>
+			 <a href="guevarakeilly_assignment-5-tables.html"><li>Portfolio Descriptions</li></a>
+			 <a  href="guevarakeilly_grids.html"><li>Photography Grid</li></a>
+			 <a  href="guevarakeilly-contact.html"><li>Contact Form</li></a>
+			 <a  href="guevarakeilly_flipbooks.html"><li>Digital Booklet</li></a>
+			</ul>
+			</li>
+	  </ul>
 <h1 class="welcome">Wellcome</h1>
 <p><img src="mr-goldrich-present.png" alt="star" class="text-img" id=".text-image" /> Here is a short welcome trailer! You will also find an animated logo I created in my Illustration class. I added a theme song to accompany it, this was my first time using GarageBand, I hope you enjoy it! </p>
 	<video width="640" height="360" controls poster="kglogo.png">	
