--- a/guevarakeilly-contact.html
+++ b/guevarakeilly-contact.html
@@ -3,21 +3,20 @@
 <head>
 <meta charset="UTF-8">
 <title>JavaScript Check Boxes</title>
-<link href="https://fonts.googleapis.com/css2?family=Fascinate&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 <style>
 	 * {margin: 0; padding: 0;
-    } @font-face {
-        font-family: 'Fascinate';
-		font-style: normal;
-        src: url(https://fonts.gstatic.com/s/fascinate/v22/z7NWdRrufC8XJK0IIElS3bzRZv-drrOg.woff2) format('woff2');
-		font-weight: 400;
 	} body {
 		background-color: whitesmoke;
 	} #page {
 		width: 928px;
-		height: 1350px;
+		max-width:100%;
+		height: 1450px;
+		max-height: 100%;
 		background: white;
-		boarder: 1px solid darkgray;
+		boarder: 1px solid darkgray; 
 		margin: 0 auto;
 	} #banner {
 		width: 100%;
@@ -25,91 +24,115 @@
 		float: none;
 		box-shadow: none;
 		boarder: none;
-	}
- } .zoom {
-        background: url("../Tutorial 4 Portfolio/thumb-tulip.jpg");
+} .zoom {
         background-size: 100%;
         background-position: center;
 	} li:hover {
 		transform: scale(1.10);
         transition: transform 0.5s;
-	}
+		background: lightyellow;
     } .zoom:hover {
         background-size: 105%;
         transition: background-size 0.5s;
-	} li {
-        font: 14pt/2.0em 'oswald';
-  		list-style: none;
-		align-items:center;
-		height 100vh;
-		float: left;
-        height: 40px;
-        text-align: center;
-		width: 90%;
-        margin-top: -4px;
-		margin-left: -50px;
-		max-width: 200px;
-  		text-wrap: pretty;
-		white-space: normal;
 	} ul {
-		display:flex;
-		justify-content: center;
-		align-items:center;
-		height 100vh;
+		max-width: 100%;
+		margin-top: -4px;
+		margin-left: 0;
+		padding: 0;
+	} li {
+        width: 24.92%;
+		max-width: 100%;
+		height: 45px;
 		float: left;
-        height: 40px;
-        text-align: center;
-        background: pink;
-		width: 100%;
-        margin-top: -4px;
-		margin-left: 0px;
+  		list-style: none;
+		text-align: center;
+		font: 15pt/2em 'roboto';
+		background: pink;
+		padding: none;
+		font-weight: 700;
     } a li {
         color: black;
-    } a {
-        text-decoration: none;
+		text-decoration: none;
     } a li:hover {
-        background: rgba(169,225,245,0.50);
+        background: lightyellow;
+	}li:last-child {
+		border-left: 1px solid white;
+	} ul li ul li {
+		visibility: hidden;
+		width: 100%;
+		float: none;
+	} ul li:hover li {
+		visibility: visible;
+	} a {
+		text-decoration: none;
+	}span{
+		font: 15pt/2em 'roboto';
+		float: left;
+		line-height: 1.0em;
+		margin: 0 3px -5px 0;
+		color: pink;
 	} h1 {
-        font: 48pt/1.4em 'fascinate', static;
+       font: 48pt/1.4em 'lexend deca', static;
         text-align: center;
         text-shadow: 2px 3px 6px pink;
-		margin-top: 70px
+		margin-top: 80px;
+		animation: fade-up 0.6s 0.4s backwards;
+	} #star {
+		margin-top: -10px;
+		margin-left: -5px;
+		width: 5%;
+		max-width:100%;
+        position: relative;
+		animation-name: flying;
+		animation-duration: 3s;
+		animation-fill-mode: forwards;
+		animation-timing-function: ease-in;
+		}
+		@keyframes flying {
+			0% {left: 10px; transform: rotate(360deg);}
+			100% {left: 120vw;} 
 	} form {
         background: pink;
 		box-shadow: 2px 3px 6px dimgray;
         width: 400px;
         margin: 36px auto;
         padding: 24px;
-        font: 14pt/1.6em oswald;
+        font: 14pt/1.6em roboto;
         border: 1px solid gray;
+		animation: fade-up 0.6s 0.4s backwards;
     } input[type="text"] {
         background: white;
-        font: 14pt/1.4em oswald;
+        font: 14pt/1.4em roboto;
         width: 100%;
         border: 1px dotted pink;
+		animation: fade-up 0.6s 0.4s backwards;
 	 } input[type="radio"] {
         background: none;
-        font: 14pt/1.4em oswald;
+        font: 14pt/1.4em roboto;
         width: 10%;
 		height: 10%;
 		outline: none;
+		animation: fade-up 0.6s 0.4s backwards;
 	 } input[type="checkbox"] {
         background: none;
-        font: 14pt/1.4em oswald;
+        font: 14pt/1.4em roboto;
         width: 10%;
 		height: 10%;
 		outline: none;
+		animation: fade-up 0.6s 0.4s backwards;
 	} .dropdown {
         background: white;
-        font: 14pt/1.4em oswald;
+        font: 14pt/1.4em roboto;
         width: 100%;
 		height: 100%;
 		outline: none;
 		boarder: grey;
+		animation: fade-up 0.6s 0.4s backwards;
 	} fieldset {
         margin-top: 18px;
 		border-width: 0;
 		border: none;
+		animation: fade-up 0.6s 0.4s backwards;
     } input[type="submit"] {
         width: 20%;
         height: 50px;
@@ -119,13 +142,24 @@
 		color: black;
 		margin-top: 40px;
         margin-bottom: 12px;
-		font: 15pt/1.4em oswald;
+		font: 15pt/1.4em roboto;
+		font-weight: 700;
 		display: block;
      	margin: 0 auto;
+		animation: fade-up 0.6s 0.4s backwards;
 	} .submit:hover {
 		transform: scale(1.10);
         transition: transform 0.5s;
-	}
+	} @keyframes fade-up {
+		0% { 
+			opacity: 0;
+			transform: translateY(30px) scale(0.9);
+		} 
+		
+		100% { 
+			opacity : 1; 
+			transform: translateY(0px) scale (1);
+		}
 </style>
 <script language="JavaScript">
     function toggle(source) {
@@ -141,17 +175,23 @@
 <img src="banner1.jpg" alt="banner1" class="banner" id="banner" />
         <ul>
             <li><a href="index.html">Home</a></li>
-			<li><a href="Meet-Keilly.html">Welcome Message</a></li>
-			<li><a href="KeillyGportfolio1.html">Portfolio</a></li>
-			<li><a href="guevarakeilly_assignment-5-tables.html">Portfolio Descriptions</a></li>
-			<li><a href="guevarakeilly_grids.html">Photography Grid</a></li> 
-			<li><a href="guevarakeilly-contact.html">Contact Form</a></li> 
-        </ul>
+			 <a  href="Meet-Keilly.html"><li>Welcome Message</li></a>
+			 <a  href="KeillyGportfolio1.html"><li>Portfolio</li></a>
+			<li>
+				More
+			<ul>
+			 <a href="guevarakeilly_assignment-5-tables.html"><li>Portfolio Descriptions</li></a>
+			 <a  href="guevarakeilly_grids.html"><li>Photography Grid</li></a>
+			 <a  href="guevarakeilly-contact.html"><li>Contact Form</li></a>
+			 <a  href="guevarakeilly_flipbooks.html"><li>Digital Booklet</li></a>
+			</ul>
+			</li>
+	  </ul>
 		
 <h1>Contact Form</h1>
-
+<img src="star-icon.png" alt="star" id="star" />
   <form action="https://formsubmit.co/guevak4@unlv.nevada.edu" method="POST">
-		<lable>First name</lable><br/>
+	<lable>First name</lable><br/>
 		<input type="text" id="fname" <br />
 		<label for="lname">Last name</label><br />
 		<input type="text" id="lname" /> <br />
